force-app/main/default/objects/Rate__c/Rate__c.object-meta.xml
<CustomObject>
    <description>Information for every &quot;Data Request&quot; for each Source. Part of the Data Partner model.</description>
    <label>Rate</label>
    <nameField>
        <label>Rate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>