force-app/main/default/objects/Rate__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>In case the &quot;End Date&quot; of the Rate is not blank and equal/less TODAY the CB will be true.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>