force-app/main/default/objects/Rate__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>The Tier/Country of the Request that will be created according the Rate</description>
    <label>Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>