force-app/main/default/objects/Rate__c/fields/Country_Tier__c.field-meta.xml
<CustomField>
    <fullName>Country_Tier__c</fullName>
    <label>Country/Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country_Tier_for_Data_Partners</valueSetName>
    </valueSet>
</CustomField>