force-app/main/default/objects/Rate__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DAU</fullName>
            </value>
            <value>
                <fullName>MAU</fullName>
            </value>
            <value>
                <fullName>S2S</fullName>
            </value>
            <value>
                <fullName>New User</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>