force-app/main/default/objects/Rate__c/fields/DAU_Threshold__c.field-meta.xml
<CustomField>
    <fullName>DAU_Threshold__c</fullName>
    <description>The DAU extra threshold number that will increase the payment to the Partner. For example if the number is 50K, for every 50K DAU above the fix payment we will need to pay X $ (the X is hold in another field - &quot;Payment Threshold&quot;)</description>
    <inlineHelpText>What is the DAU threshold above the fix payment?</inlineHelpText>
    <label>DAU Threshold</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>