force-app/main/default/objects/Rate__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <description>The date the &quot;Rate&quot; is effective. Should be same as the Contract period. But not always. If there is a change in the Rate it should inflict by the Effective/End Date.</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>