force-app/main/default/objects/Rate__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Once populated, the &quot;Rate&quot; is no longer valid in the &quot;Monthly Data Request&quot; calculation.</description>
    <inlineHelpText>Once populated and Date is in the past, no Monthly Data Records will be created. In case the Source is no longer relevant, make sure to deactivate it!</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>