force-app/main/default/objects/Rate__c/fields/Fixed_Monthly_DAU__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Monthly_DAU__c</fullName>
    <description>The DAU number that the payment is fixed. Meaning if the Fixed Monthly DAU is &quot;100,000&quot; and the Fixed Monthly Price is &quot;5000&quot;. Then as long as the Monthly DAU is less than 100K, they payment will be always 5K.</description>
    <label>Fixed Monthly DAU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>