force-app/main/default/objects/Rate__c/fields/Fixed_Monthly_Payment__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Monthly_Payment__c</fullName>
    <description>The fixed monthly payment in case the Monthly Data is not greated than the &quot;Fixed Monthly DAU&quot;</description>
    <label>Fixed Monthly Payment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>