force-app/main/default/objects/Rate__c/fields/Payment_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Payment_Threshold__c</fullName>
    <description>The extra payment threshold we will pay to the Partner for every DAU Threshold. For example if the value is 2,000$ and the DAU Threshold is 50K. We will pay additional 2,000$ for every extra 50K DAU above the fix payment.</description>
    <label>Payment Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>