force-app/main/default/objects/Rate__c/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <description>The actual Rate we pay for each data unit as agreed in the Contract</description>
    <label>Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>