force-app/main/default/objects/Rate__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>