force-app/main/default/objects/Rate__c/fields/Second_Rate__c.field-meta.xml
<CustomField>
    <fullName>Second_Rate__c</fullName>
    <description>In cases where the payment is done in secondary rate when the AVG Monthly DAU (AVG Data Units) reaches a threshold</description>
    <inlineHelpText>Once populated, the payment calculation will be according to the Fixed Monthly DAU and Second 
Rate.</inlineHelpText>
    <label>Second Rate</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>