force-app/main/default/objects/Rate__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <referenceTo>Source__c</referenceTo>
    <relationshipLabel>Rates</relationshipLabel>
    <relationshipName>Rates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>