force-app/main/default/objects/Rate__c/listViews/All_Rates.listView-meta.xml
<ListView>
    <fullName>All_Rates</fullName>
    <columns>Account_Name__c</columns>
    <columns>Source__c</columns>
    <columns>NAME</columns>
    <columns>Data_Type__c</columns>
    <columns>Country_Tier__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Rate__c</columns>
    <columns>DAU_Threshold__c</columns>
    <columns>Fixed_Monthly_Payment__c</columns>
    <columns>Fixed_Monthly_DAU__c</columns>
    <columns>Second_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>Rates (Fees) - Active - Partners</label>
</ListView>